一通りの機能を実装

--- a/popup.html
+++ b/popup.html
@@ -33,8 +33,11 @@
                     <option value="5">建築・都市システム学</option>
                 </select>
             </div>
+            <div id="common">
+                <input type="checkbox" id="com" name="com" value="1">開講学科が共通のものを表示する
+            </div>
             <div id="button_save">
-                <input id="save" type="button" value="保存">
+                <input id="save" type="button" value="更新">
             </div>
         </div>
     </body>
