popupの文字修正

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="popup_box">
-            <p>情報の学年と学科を選択</p>
+            <p>学年と学科を選択</p>
 
             <div id="grade">
                 学年: 
