--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <table>
             <tr>
                 <td>製作者</td>
-                <td>たくのこ</td>
+                <td>たくのこ(TuT 2016年度 B3 3系)</td>
             </tr>
             <tr>
                 <td>Twitter</td>
