作業一時保存．補講情報が反映されてない．スタイルがとても気にくわない．いらないやつの削除機能を付けないと，むしろ見にくい．．

--- a/popup.html
+++ b/popup.html
@@ -2,18 +2,40 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
+        <!-- jquery -->
         <script src="js/jquery-1.12.3.min.js"></script>
-        <script src="js/popup.js"></script>
-        <link rel="stylesheet" type="text/css" href="popup.css">
+        <!-- 別サイトから情報を持ってくる -->
+        <script src="js/jquery.xdomainajax.js"></script>
         <!-- Bootstrapの読み込み -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <script src="bootstrap/js/bootstrap.min.js"></script>
+        <!-- 自分の設定 -->
+        <script src="js/popup.js"></script>
+        <link rel="stylesheet" type="text/css" href="popup.css">
     </head>
     <body>
         <div id="popup_box">
             <div id="jp_lec_can_link">
                 <button type="button" class="btn btn-primary" id="jp_lec_can_button">休講・補講 お知らせページ</button>
             </div>
+
+            <div id="today_info">
+                <div id="doday_info_title">
+                    本日の休講・補講情報
+                </div>
+                <table class="table" id="cancel_table">
+                    <tr class="cancel_table_tr" id="can_table_header">
+                        <th class="tab_time" scope="row">時</th>
+                        <th class="tab_state" scope="row">情</th>
+                        <th class="tab_sub" scope="row">科目</th>
+                        <th class="tab_teach" scope="row">担</th>
+                    </tr>
+                    <tr class="cancel_table_tr">
+                        <td colspan="3">休講・補講情報はありません．</td>
+                    </tr>
+                </table>
+            </div>
+
             <p>学年と学科を選択</p>
 
             <div id="grade">
