更新情報を1.2.2まで作成

--- a/index.html
+++ b/index.html
@@ -84,6 +84,32 @@
                 <li>開発時，ログ出力を削除</li>
             </ul>
         </div>
+        <h5>1.1.1</h5>
+        <div class="ver_content">
+            <ul>
+                <li>本日の休講・補講情報をオレンジ色にハイライト</li>
+            </ul>
+        </div>
+        <h5>1.2.0</h5>
+        <div class="ver_content">
+            <ul>
+                <li>ポップアッップ上に今日の休講・補講情報の表示機能を追加</li>
+                <li>休講・補講ページのハイライト色の変更</li>
+            </ul>
+        </div>
+        <h5>1.2.1</h5>
+        <div class="ver_content">
+            <ul>
+                <li>popup上の本日の日付が2016/06/06で固定されているバグを修正</li>
+            </ul>
+        </div>
+        <h5>1.2.2</h5>
+        <div class="ver_content">
+            <ul>
+                <li>休講・補講ページの日付が6日で固定されているバグを修正</li>
+                <li>補講情報がない際のポップアップの表示バグを修正</li>
+            </ul>
+        </div>
     </div>
 
 
