翌日，前日機能の実装

--- a/popup.html
+++ b/popup.html
@@ -30,6 +30,10 @@
                         <th class="tab_teach" scope="row">担当</th>
                     </tr>
                </table>
+               <div id="select_day">
+                   <button type="button" class="btn btn-success" id="button_prev_day">&lt;&lt; 前日</button>
+                   <button type="button" class="btn btn-success" id="button_next_day">翌日 &gt;&gt;</button>
+               </div>
             </div>
 
             <p>学年と学科を選択</p>
