今日ボタンの追加

--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
 
             <div id="today_info">
                 <div id="doday_info_title">
-                    本日[<div id="today_str"></div>]の休講・補講情報
+                    [<div id="today_str"></div>]の休講・補講情報
                 </div>
                 <table class="table" id="cancel_table">
                     <tr class="cancel_table_tr" id="can_table_header">
@@ -32,6 +32,7 @@
                </table>
                <div id="select_day">
                    <button type="button" class="btn btn-success" id="button_prev_day">&lt;&lt; 前日</button>
+                   <button type="button" class="btn btn-success" id="button_today">今日</button>
                    <button type="button" class="btn btn-success" id="button_next_day">翌日 &gt;&gt;</button>
                </div>
             </div>
