content script でもjqueryを使えるように更新 一時保存

--- a/sampel.html
+++ b/sampel.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" >
-<head><title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>
 	掲示板
 </title>
     <style type="text/css">
@@ -30,15 +31,6 @@
 </head>
 <!-- <body id="body"> onload="redirect(&quot;https://www.ead.tut.ac.jp/board/main.aspx&quot;, 60000);"> -->
 <body id="body">
-    <form name="frmMain" method="post" action="./main.aspx" id="frmMain">
-        <div>
-        </div>
-
-        <div>
-
-            <input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="AF8FCD08" />
-        </div>
-
         <!-- ここから休講情報本体 -->
         <div>
             <table id="tblMain" style="border-collapse:collapse; width:98%;">
@@ -715,6 +707,5 @@
                 </tr>
             </table>
         </div>
-    </form>
 </body>
 </html>
